test/errors/png-open.rom
Error in `png-open.asm` on line 2: Could not open `png-open.png`
